# clap

./: .gitignore  README.md  bunfig.toml  install.sh  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: cache-correctness-matrix.yml  ci.yml  release.yml  warm-native-cache.yml
.otto/agents/kimi-build/: agent.md
apps/cli/: package.json  tsconfig.json
apps/cli/src/: assets.d.ts  cli-server-lifecycle.test.ts  cuda-worker.ts  embedded-workers.ts  index.ts  models-output.test.ts  models-output.ts  progress.test.ts  progress.ts  pull-cancellation.test.ts  pull-cancellation.ts  resolver-output.test.ts  resolver-output.ts  server-lifecycle.test.ts  server-lifecycle.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  router.tsx  styles.css
apps/web/src/hooks/: useActions.ts  useDashboard.ts
apps/web/src/lib/: api.ts  format.test.ts  format.ts
config/: cache-correctness-assets.json  cache-correctness-matrix.json
docs/: clap-local-model-server-plan.md  distribution-plan.md  inference-runtime-baseline.md  inference-runtime-benchmark-follow-up.md  macos-release-signing.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  native-runtimes.md  pain-points-and-improvements.md  rust-cache-coordinator-plan.md  scale-plan.md
libexec/: README.md
native/cache/: Cargo.toml  README.md  cbindgen.toml
native/cache/crates/clap-cache-core/: Cargo.toml
native/cache/crates/clap-cache-core/src/: lib.rs  radix.rs
native/cache/crates/clap-cache-core/tests/: coordinator.rs  retention.rs
native/cache/crates/clap-cache-ffi/: Cargo.toml
native/cache/crates/clap-cache-ffi/src/: lib.rs
native/cache/crates/clap-cache-ffi/tests/: abi.rs
native/cache/include/: clap_cache.h
native/cache/tests/: header-layout.c
native/cache/tests/traces/: README.md  scenarios.json
native/llama/: CMakeLists.txt  active-concurrency.h  cache-adapter.h  cache-adapter.test.cpp  clap-llama.cpp  native-characterization.h  native-characterization.test.cpp  stable-boundary.h
native/llama/include/clap/llama/: cache-executor.h  cache-identity.h  environment.h  generation-stepper.h  model-runtime.h  prompt.h  protocol.h  request-preparer.h  request-state.h  sampling.h  scheduler.h  stop-buffer.h  structured-output.h  telemetry.h  worker-state.h  worker.h
native/llama/src/: cache-executor.cpp  cache-identity.cpp  environment.cpp  generation-stepper.cpp  main.cpp  model-runtime.cpp  prompt.cpp  protocol.cpp  request-preparer.cpp  request-state.cpp  sampling.cpp  scheduler.cpp  stop-buffer.cpp  structured-output.cpp  telemetry.cpp  worker-state.cpp  worker.cpp
native/llama/tests/: cache-checkpoint.test.cpp  cache-executor.test.cpp  cache-identity.test.cpp  cache-model-probe.test.cpp  cache-request-lifecycle.test.cpp  cache-transaction.test.cpp  environment.test.cpp  generation-stepper.test.cpp  model-runtime.test.cpp  prompt.test.cpp  protocol.test.cpp  request-preparer.test.cpp  request-state.test.cpp  sampling.test.cpp  scheduler.test.cpp  stop-buffer.test.cpp  structured-output.test.cpp  structured-sampling.test.cpp  telemetry.test.cpp  worker-state.test.cpp  worker.test.cpp
native/llama/tests/support/: cache-model-probe.h  cache-state-backend.h
native/mlx/: Package.resolved  Package.swift
native/mlx/Sources/ClapCacheBridge/: ClapCacheBridge.c
native/mlx/Sources/ClapCachePolicy/: ActiveConcurrencyPolicy.swift  CacheTelemetry.swift  DeclaredModelMetadata.swift  LatencyScheduler.swift  NativeRequestBehavior.swift  PhysicalCacheIdentity.swift  RetentionPolicy.swift
native/mlx/Sources/ClapMLXCache/: AnchorManager.swift  CacheCoordinator.swift  CacheExecutor.swift  CacheIdentity.swift  CacheSlot.swift  CacheTransaction.swift  MLXCacheOperations.swift
native/mlx/Sources/ClapMLXGeneration/: ActiveRequest.swift  GenerationBackend.swift  GenerationEvent.swift  GenerationStepper.swift  PreparedRequest.swift  RequestCompletion.swift
native/mlx/Sources/ClapMLXModel/: ModelDirectoryCompatibility.swift  ModelLoader.swift  ModelRuntime.swift  PromptRenderer.swift  PromptTypes.swift  TokenCapabilities.swift
native/mlx/Sources/ClapMLXWorkerCore/: PendingRequest.swift  ProtocolState.swift  SchedulerEvent.swift  WorkerScheduler.swift
native/mlx/Sources/clap-mlx/: CacheAdapters.swift  CacheCoordinator.swift  GenerationAdapter.swift  main.swift
native/mlx/Tests/ClapCacheBridgeTests/: ClapCacheBridgeTests.swift
native/mlx/Tests/ClapCachePolicyTests/: ActiveConcurrencyPolicyTests.swift  CacheTelemetryTests.swift  DeclaredModelMetadataTests.swift  LatencySchedulerTests.swift  NativeRequestBehaviorTests.swift  PhysicalCacheIdentityTests.swift  RetentionPolicyTests.swift
native/mlx/Tests/ClapMLXCacheTests/: AnchorManagerTests.swift  CacheArchitectureShapeTests.swift  CacheExecutorTests.swift  CacheIdentityTests.swift  CacheTransactionBoundaryTests.swift  CacheTransactionTests.swift  CheckpointLifecycleTests.swift  PhysicalCacheModels.swift  TestCacheIdentity.swift
native/mlx/Tests/ClapMLXGenerationTests/: ActiveRequestTests.swift  CacheCancellationTests.swift  GenerationStepperTests.swift  RequestCompletionTests.swift  (+1 more)
scripts/: batch-smoke.py  build-binary.ts  build-linux.sh  build-llama.ts  build-mlx.ts  build-web.ts  check-bundle.ts  check-cache-correctness-gates.ts  check-cache-identity-security.ts  check-capability-priority.ts  check-documentation.ts  check-generated-drift.ts  check-honest-memory-telemetry.ts  check-mlx-worker-protocol.ts  check-native-cache-ownership.ts  check-native-probe-isolation.ts  check-native-structure.ts  check-runtime-process-ownership.ts  check-structured-output-gates.ts  dedup-smoke.py  ensure-libexec.ts  install.test.ts  macos-keychain.sh  macos-release.sh  macos-release.test.ts  prepare-bundle.ts  run-cache-correctness-matrix.test.ts  run-cache-correctness-matrix.ts  run-mlx-physical-test.ts  sanitize-cache-correctness-log.ts  validate-cache-sessions.ts  validate-cache-test-assets.test.ts  validate-cache-test-assets.ts  vendor-llama.ts
(+37 files in other folders)
