[workspace]
members = [
  "crates/clap-cache-core",
  "crates/clap-cache-ffi",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
